--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-老師您好 我來交作業
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        p{
+            color:red;
+            font-size: 20px;
+        }
+    </style>
+</head>
+<body>
+   <p id="p1">學號3411007020</p>
+</body>
+<script>
+    document.getElementById("p1").onclick=function(){
+        alert('吳庭儀');
+    };
+</script>
+</html>
